fixed the overflow problem using css not js.

--- a/src/scss/trd-core.scss
+++ b/src/scss/trd-core.scss
@@ -5,6 +5,8 @@
 html,body{
   scroll-behavior: smooth;
 }
-.overflow-off{
-  overflow: hidden !important;
+@media only screen and (min-width: 782px){
+  .overflow-off{
+    overflow: hidden !important;
+  }
 }
